<resources>
    <string name="app_name" translatable="false">DOgIT</string>
    <string name="internet_error">Please check your internet connection</string>
    <string name="hello">Hello</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="incorrect_login">User or password incorrect</string>
    <string name="user_locked">User locked</string>
    <string name="title_activity_recover_password">RecoverPasswordActivity</string>
    <string name="mail_send">Your password has been sent</string>
    <string name="mail_not_exist">There are no registered users with email</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_saved">User saved</string>
    <string name="user_exists">An account with this email already exists</string>
    <string name="error_user_saved">Failed to save user</string>
    <string name="select_spinner">Select</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="nav_option_user">User</string>
    <string name="nav_option_pet">My Pets</string>
    <string name="nav_option_blog">Blog</string>
    <string name="nav_option_publication">Publications</string>
    <string name="nav_option_request">Requests</string>
    <string name="nav_option_adoption">Adoptions</string>
    <string name="nav_option_post_adoption">Post-Adoptions</string>
    <string name="nav_option_visit">Visits</string>
    <string name="nav_option_event">Events</string>
    <string name="nav_option_log_out">Log out</string>
    <string name="error_pet">No pets were found</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="error_go_add_pet">You must have registered pets</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="nav_option_users">Users</string>
    <string name="nav_option_pets">Pets</string>
    <string name="nav_option_blogs">Blogs</string>
    <string name="nav_option_publications">Publications</string>
    <string name="nav_option_adoptions">Adoptions</string>
    <string name="nav_option_visits">Visits</string>
    <string name="nav_option_events">Events</string>
    <string name="nav_option_reports">Reports</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="user_status">Satisfactory state change</string>
    <string name="error_status_update">Error changing status</string>
    <string name="subject_account_lock">DOgIT - Account lockout</string>
    <string name="subject_account_unlock">DOgIT - Account unlockout</string>
    <string name="content_account_lock">, we regret report that account has been blocked.</string>
    <string name="content_account_unlock">, we want to inform you that your account has been unlocked.</string>
    <string name="title_activity_edit_user_profile">EditUserProfileActivity</string>
    <string name="profile_update">Updated profile</string>
    <string name="error_profile_update">Failed to update profile</string>
    <string name="title_activity_add_pet">AddPetActivity</string>
    <string name="pet_save">Pet save</string>
    <string name="error_pet_save">Failed to save pet</string>
    <string name="pet_delete">Pet delete</string>
    <string name="error_pet_delete">Failed to delete pet</string>
    <string name="error_pet_publication">There is an publication created with this pet</string>
    <string name="title_activity_about_event">AboutEventActivity</string>
    <string name="assistence_save">Assistence registered!</string>
    <string name="error_assistence_save">Failed to save assistence</string>
    <string name="error_assistence_saved">You have already registered your assistance</string>
    <string name="error_edit_event">To edit you must be the owner of the event</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="event_created">Event created</string>
    <string name="error_event_save">Failed to save event</string>
    <string name="event_delete">Event delete</string>
    <string name="error_event_delete">Failed to delete event</string>
    <string name="event_update">Updated event</string>
    <string name="error_event_update">Failed to update event</string>
    <string name="title_activity_add_publication">AddPublicationActivity</string>
    <string name="publication_created">Publication created</string>
    <string name="error_publication_save">Failed to save publication</string>
    <string name="publication_delete">Publication delete</string>
    <string name="error_publication_delete">Failed to delete publication</string>
    <string name="publication_update">Updated Publication</string>
    <string name="error_publication_update">Failed to update Publication</string>
    <string name="title_activity_add_blog">AddBlogActivity</string>
    <string name="blog_created">Publication created</string>
    <string name="error_blog_save">Failed to save publication</string>
    <string name="blog_delete">Publication delete</string>
    <string name="error_blog_delete">Failed to delete publication</string>
    <string name="blog_update">Updated Publication</string>
    <string name="error_blog_update">Failed to update Publication</string>
    <string name="title_activity_about_publication">AboutPublicationActivity</string>
    <string name="error_edit_publication">To edit you must be the owner of the publication</string>
    <string name="title_activity_send_request">SendRequestActivity</string>
    <string name="question_request">Why do you want to adopt</string>
    <string name="question_mark" translatable="false">"?"</string>
    <string name="error_request_publication">You can not send a request to a publication of yours</string>
    <string name="request_send">Request sent</string>
    <string name="error_request_send">Error sending request</string>
    <string name="request_sended">Error sending request</string>
    <string name="request_send_already">You have already sent a request</string>
    <string name="mail_send_request">DOgIT - Adoption request</string>
    <string name="mail_send_request_request">, you have received an adoption request for</string>
    <string name="title_activity_about_request">AboutRequestActivity</string>
    <string name="request_refuse">Rejected request</string>
    <string name="error_request_refuse">Error when rejecting request</string>
    <string name="request_accept">Approved request</string>
    <string name="error_request_accept">Error when approving request</string>
    <string name="response_mail_subject">DOgIT - Request response</string>
    <string name="response_mail">the request sent for the adoption of</string>
    <string name="response_mail_body">has been</string>
    <string name="approved">approved</string>
    <string name="rejected">rejected</string>
    <string name="title_activity_schedule_visit">ScheduleVisitActivity</string>
    <string name="visit_mail_subject">DOgIT - Scheduled visit</string>
    <string name="response_mail_visit">you have a visit scheduled with</string>
    <string name="response_mail_visit_to">to see</string>
    <string name="response_mail_visit_date">the day</string>
    <string name="response_mail_visit_in">In</string>
    <string name="visit_created">Visit created</string>
    <string name="error_visit_save">Failed to save visit</string>
    <string name="mail_send_visit">Mail sent</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="gender_hint">Sex</string>
    <string name="birthdate_hint">Birthdate</string>
    <string name="mobile_phone_hint">Mobile Phone</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="man_gender">Man</string>
    <string name="women_gender">Woman</string>
    <string name="work_place_hint">Work Place</string>
    <string name="dni_hint">DNI</string>
    <string name="address_hint">Address</string>
    <string name="date_format_hint">dd/mm/yyyy</string>
    <string name="name_hint">Name</string>
    <string name="weigth_hint">Weigth Kg</string>
    <string name="size_hint">Size cm</string>
    <string name="age_hint">Age month</string>
    <string name="description_hint">Description</string>
    <string name="detail_hint">Detail</string>
    <string name="date_hint">Date</string>
    <string name="pet_hint">Pet</string>
    <string name="location_hint">Location</string>
    <string name="capability_hint">Capability</string>
    <string name="requirements_hint">Requirements</string>
    <string name="answer_hint">Answer</string>
    <string name="message_hint">Message</string>
    <string name="rescue_date_hint">Rescue date</string>
    <string name="signInButton">Login</string>
    <string name="signUpTextView"><u>No account yet? Create one</u></string>
    <string name="forgetPasswordTextView"><u>Do not remember your password?</u></string>
    <string name="signUpButton">Create account</string>
    <string name="signInTextView"><u>Already a member? Login</u></string>
    <string name="cancelButton">Cancel</string>
    <string name="acceptButton">Accept</string>
    <string name="galeryButton">Galery</string>
    <string name="sendMailButton">Send mail</string>
    <string name="shareButton">Share</string>
    <string name="refuseButton">Refuse</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">The minimum amount is 8 characters</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_lastName">Invalid last name</string>
    <string name="invalid_dni">Invalid Dni</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_workPlace">Invalid work place</string>
    <string name="invalid_mobilePhone">Invalid mobile phone</string>
    <string name="invalid_gender">Invalid gender</string>
    <string name="invalid_birthdate">Invalid birthdate</string>
    <string name="invalid_rescue_date">Invalid rescue date</string>
    <string name="invalid_date">Invalid date</string>
    <string name="empty_name">Complete name</string>
    <string name="empty_description">Complete description</string>
    <string name="empty_weigth">Complete weigth</string>
    <string name="empty_size">Complete size</string>
    <string name="empty_age">Complete age</string>
    <string name="empty_photo">Choose a picture</string>
    <string name="empty_pet">Choose a pet</string>
    <string name="empty_capability">Complete capability</string>
    <string name="empty_location">Complete location</string>
    <string name="empty_requirements">Complete requirements</string>
    <string name="empty_answer">Complete answer</string>
    <string name="empty_message">Complete message</string>
    <string name="sample_name" translatable="false">Sample Name</string>
    <string name="sample_gender" translatable="false">Sample Gender</string>
    <string name="sample_description" translatable="false">Sample description</string>
    <string name="sample_weight" translatable="false">Sample weigth</string>
    <string name="sample_size" translatable="false">Sample size</string>
    <string name="sample_rescue_date" translatable="false">Sample rescue date</string>
</resources>