<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_option_user" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/nav_option_users" />
        <item
            android:id="@+id/nav_pets"
            android:icon="@drawable/ic_pets_black_24dp"
            android:title="@string/nav_option_pets" />
        <item
            android:id="@+id/nav_blogs"
            android:icon="@drawable/ic_pages_black_24dp"
            android:title="@string/nav_option_blogs" />
        <item
            android:id="@+id/nav_publications"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/nav_option_publications" />
        <item
            android:id="@+id/nav_adoptions"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/nav_option_adoption" />
        <item
            android:id="@+id/nav_visits"
            android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
            android:title="@string/nav_option_visit" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nav_option_event" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_insert_drive_file_black_24dp"
            android:title="@string/nav_option_reports" />
        <item
            android:id="@+id/nav_sesion"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_option_log_out" />
    </group>

</menu>
