<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AboutPetActivity"
    tools:showIn="@layout/activity_about_pet">

    <com.androidnetworking.widget.ANImageView
        android:id="@+id/photoANImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:src="@mipmap/ic_launcher"
        android:elevation="6dp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/photoANImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:text="@string/sample_name"
        android:fontFamily="@font/sourcesansprolight"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:fontFamily="@font/sourcesansprolight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:text="@string/sample_description"/>

    <TextView
        android:id="@+id/weighTextView"
        android:fontFamily="@font/sourcesansprolight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:text="@string/sample_weight"/>

    <TextView
        android:id="@+id/rescueDateTextView"
        android:fontFamily="@font/sourcesansprolight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weighTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:text="@string/sample_rescue_date"/>

    <TextView
        android:id="@+id/sizeTextView"
        android:fontFamily="@font/sourcesansprolight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rescueDateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:text="@string/sample_size"/>

</android.support.constraint.ConstraintLayout>