<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.EditUserProfileActivity"
    tools:showIn="@layout/activity_edit_user_profile">

    <com.androidnetworking.widget.ANImageView
        android:id="@+id/photoANImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:src="@mipmap/ic_launcher"
        android:elevation="6dp" />

    <Button
        android:id="@+id/galeryButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/photoANImageView"
        app:layout_constraintBottom_toTopOf="@id/nameTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/galeryButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:onClick="galeryClick"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoANImageView"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorTextAppearance="@style/Error"
        app:counterOverflowTextAppearance="@style/Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorTextAppearance="@style/Error"
        app:counterOverflowTextAppearance="@style/Error">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/lastNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameTextInputLayout"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:counterOverflowTextAppearance="@style/Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:counterOverflowTextAppearance="@style/Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mobilePhoneTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:counterOverflowTextAppearance="@style/Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/mobilePhoneInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_phone_hint"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/workPlaceTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobilePhoneTextInputLayout"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:counterOverflowTextAppearance="@style/Error">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/workPlaceInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/work_place_hint"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dniTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workPlaceTextInputLayout"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:counterOverflowTextAppearance="@style/Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/dniInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dni_hint"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addressTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dniTextInputLayout"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:counterOverflowTextAppearance="@style/Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/AddressTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:text="@string/gender_hint"
        app:layout_constraintTop_toBottomOf="@id/addressTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorAccent" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/genderTextView"
        app:layout_constraintTop_toBottomOf="@id/addressTextInputLayout" />

    <TextView
        android:id="@+id/birthDateTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:text="@string/birthdate_hint"
        app:layout_constraintTop_toBottomOf="@id/genderTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/birthDateEditText"
        android:inputType="date"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:layout_constraintStart_toEndOf="@id/birthDateTextView"
        app:layout_constraintTop_toBottomOf="@id/genderTextView"
        android:textSize="18sp"
        android:hint="@string/date_format_hint"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintTop_toBottomOf="@id/birthDateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/cancelButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="cancelClick"/>

        <Button
            android:id="@+id/updateInfoButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/acceptButton"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:onClick="updateUserClick"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>